individual-manager: dup the Individual ID instead of borrowing it

It's not immutable any more so we have to copy the string.

https://bugzilla.gnome.org/show_bug.cgi?id=658573